adding script to add and get envs
